--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "plugins": ["react", "prettier"],
     "rules": {
       "prettier/prettier": "error",
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      "no-unused-vars": "off"
     }
   }
