--- a/package.json
+++ b/package.json
@@ -1,20 +1,39 @@
 {
-  "name": "grand-stack-starter-web-react",
+  "name": "anu-graph-webapp",
   "version": "0.0.1",
-  "description": "React app for GRANDstack Starter",
+  "description": "React app for ANU Graphs.",
   "dependencies": {
     "@apollo/client": "^3.1.3",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
+    "@mui/material": "^5.2.5",
     "classnames": "^2.2.6",
     "graphql": "^14.5.8",
     "moment": "^2.29.1",
+    "neovis.js": "^1.6.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-resize-aware": "^3.0.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.2",
     "recharts": "^2.0.0"
+  },
+  "devDependencies": {
+    "concurrently": "^5.2.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "execa": "^4.0.2",
+    "grandstack": "^0.1.7",
+    "http-proxy-middleware": "^0.20.0",
+    "husky": ">=4",
+    "lint-staged": ">=10",
+    "prettier": "^2.0.5",
+    "prettier-eslint-cli": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,13 +42,21 @@
     "eject": "react-scripts eject",
     "now-build": "react-scripts build"
   },
-  "devDependencies": {
-    "http-proxy-middleware": "^0.20.0"
-  },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "eslint --fix"
+    ]
+  }
 }
