--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "React app for ANU Graphs.",
   "dependencies": {
     "@apollo/client": "^3.1.3",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
-    "@mui/material": "^5.2.5",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.6",
     "classnames": "^2.2.6",
     "graphql": "^14.5.8",
     "moment": "^2.29.1",
@@ -36,7 +39,7 @@
     "prettier-eslint-cli": "^5.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
