--- a/.empty.env
+++ b/.empty.env
@@ -1,5 +1,5 @@
 # Neo4j
-REACT_APP_NEO4J_URI=localhost:7687
+REACT_APP_NEO4J_URI=neo4j://localhost:7687
 REACT_APP_NEO4J_USER=neo4j
 REACT_APP_NEO4J_PASSWORD=neo4j
 
