--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^4.9.1",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.6",
+    "build": "^0.1.4",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "graphql": "^14.5.8",
@@ -40,8 +41,8 @@
     "prettier-eslint-cli": "^5.0.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
+    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts --openssl-legacy-provider start",
+    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "now-build": "react-scripts build"
