--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "prettier-eslint-cli": "^5.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
