--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "^0.1.4",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
+    "express": "^4.17.2",
     "graphql": "^14.5.8",
     "moment": "^2.29.1",
     "neovis.js": "^1.6.0",
