--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "GRANDstack App",
-  "name": "GRANDstack Starter Project",
+  "short_name": "ANU Graph Vis",
+  "name": "ANU Graph Vis",
   "icons": [
     {
       "src": "favicon.ico",
