--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^14.5.8",
     "moment": "^2.29.1",
     "neovis.js": "^1.6.0",
+    "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
