--- a/package.json
+++ b/package.json
@@ -15,32 +15,25 @@
     "chroma-js": "^2.1.2",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
-    "cytoscape-cose-bilkent": "^4.1.0",
-    "d3": "^7.2.1",
-    "express": "^4.17.2",
     "graphology": "^0.23.2",
     "graphology-generators": "^0.11.2",
     "graphology-layout": "^0.5.0",
     "graphology-layout-forceatlas2": "^0.8.1",
     "graphology-types": "^0.23.0",
     "graphql": "^14.5.8",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "neo4j-driver": "^4.4.1",
     "neovis.js": "^1.6.0",
     "path": "^0.12.7",
-    "pixi-viewport": "^4.34.4",
-    "pixi.js": "^6.2.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-cytoscapejs": "^1.2.1",
     "react-dom": "^17.0.1",
-    "react-graph-vis": "^1.0.7",
     "react-resize-aware": "^3.0.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.2",
     "react-sigma-v2": "^1.3.0",
-    "recharts": "^2.0.0",
     "sigma": "^2.1.3"
   },
   "devDependencies": {
