--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-animate-height": "^2.0.23",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1",
     "react-resize-aware": "^3.0.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
