--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "graphology": "^0.23.2",
     "graphology-generators": "^0.11.2",
     "graphology-layout": "^0.5.0",
+    "graphology-layout-force": "^0.2.4",
     "graphology-layout-forceatlas2": "^0.8.1",
+    "graphology-layout-noverlap": "^0.4.1",
     "graphology-types": "^0.23.0",
     "graphql": "^14.5.8",
     "lodash": "^4.17.21",
