--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.6",
     "@mui/styles": "^5.2.3",
+    "@reduxjs/toolkit": "^1.7.1",
     "build": "^0.1.4",
     "chroma-js": "^2.1.2",
     "classnames": "^2.2.6",
@@ -37,11 +38,13 @@
     "react-dom": "^17.0.1",
     "react-github-btn": "^1.2.1",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
     "react-resize-aware": "^3.0.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.2",
     "react-sigma-v2": "^1.3.0",
+    "redux": "^4.1.2",
     "sigma": "^2.1.3"
   },
   "devDependencies": {
