--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
     "chroma-js": "^2.1.2",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
+    "cytoscape": "^3.20.0",
+    "cytoscape-avsdf": "^1.0.0",
+    "cytoscape-cise": "^1.0.0",
+    "cytoscape-cola": "^2.5.0",
+    "cytoscape-cose-bilkent": "^4.1.0",
+    "cytoscape-dagre": "^2.3.2",
+    "cytoscape-elk": "^2.0.2",
+    "cytoscape-fcose": "^2.1.0",
     "graphology": "^0.23.2",
     "graphology-generators": "^0.11.2",
     "graphology-layout": "^0.5.0",
@@ -34,6 +42,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-animate-height": "^2.0.23",
+    "react-cytoscapejs": "^1.2.1",
     "react-data-table-component": "^7.4.6",
     "react-dom": "^17.0.1",
     "react-github-btn": "^1.2.1",
@@ -45,7 +54,8 @@
     "react-scripts": "^4.0.2",
     "react-sigma-v2": "^1.3.0",
     "redux": "^4.1.2",
-    "sigma": "^2.1.3"
+    "sigma": "^2.1.3",
+    "web-worker": "^1.2.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
