--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "cytoscape-cise": "^1.0.0",
     "cytoscape-cola": "^2.5.0",
     "cytoscape-cose-bilkent": "^4.1.0",
+    "cytoscape-d3-force": "^1.1.4",
     "cytoscape-dagre": "^2.3.2",
     "cytoscape-elk": "^2.0.2",
     "cytoscape-fcose": "^2.1.0",
+    "cytoscape-klay": "^3.1.4",
+    "cytoscape-popper": "^2.0.0",
+    "cytoscape-spread": "^3.0.0",
     "graphology": "^0.23.2",
     "graphology-generators": "^0.11.2",
     "graphology-layout": "^0.5.0",
