--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-sigma-v2": "^1.3.0",
     "redux": "^4.1.2",
     "sigma": "^2.1.3",
+    "tippy.js": "^6.3.7",
     "web-worker": "^1.2.0"
   },
   "devDependencies": {
