--- a/package.json
+++ b/package.json
@@ -17,24 +17,11 @@
     "chroma-js": "^2.1.2",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
-    "cytoscape": "^3.20.0",
-    "cytoscape-avsdf": "^1.0.0",
-    "cytoscape-cise": "^1.0.0",
-    "cytoscape-cola": "^2.5.0",
-    "cytoscape-cose-bilkent": "^4.1.0",
-    "cytoscape-d3-force": "^1.1.4",
-    "cytoscape-dagre": "^2.3.2",
-    "cytoscape-elk": "^2.0.2",
-    "cytoscape-fcose": "^2.1.0",
+    "cytoscape": "3.20.0",
     "cytoscape-klay": "^3.1.4",
     "cytoscape-popper": "^2.0.0",
-    "cytoscape-spread": "^3.0.0",
     "graphology": "^0.23.2",
     "graphology-generators": "^0.11.2",
-    "graphology-layout": "^0.5.0",
-    "graphology-layout-force": "^0.2.4",
-    "graphology-layout-forceatlas2": "^0.8.1",
-    "graphology-layout-noverlap": "^0.4.1",
     "graphology-types": "^0.23.0",
     "graphql": "^14.5.8",
     "lodash": "^4.17.21",
