--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "chroma-js": "^2.1.2",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
-    "cytoscape": "3.20.0",
+    "cytoscape": "^3.20.0",
     "cytoscape-klay": "^3.1.4",
     "cytoscape-popper": "^2.0.0",
     "graphology": "^0.23.2",
     "graphology-generators": "^0.11.2",
+    "graphology-layout": "^0.5.0",
     "graphology-types": "^0.23.0",
     "graphql": "^14.5.8",
     "lodash": "^4.17.21",
