--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^17.0.1",
     "react-github-btn": "^1.2.1",
     "react-icons": "^4.3.1",
+    "react-query": "^3.34.8",
     "react-redux": "^7.2.6",
     "react-resize-aware": "^3.0.1",
     "react-router": "^5.1.2",
