--- a/package.json
+++ b/package.json
@@ -15,56 +15,42 @@
     "@reduxjs/toolkit": "^1.7.1",
     "build": "^0.1.4",
     "chroma-js": "^2.1.2",
-    "classnames": "^2.2.6",
     "clsx": "^1.1.1",
-    "cytoscape": "^3.20.0",
     "cytoscape-klay": "^3.1.4",
     "cytoscape-popper": "^2.0.0",
     "graphology": "^0.23.2",
-    "graphology-generators": "^0.11.2",
     "graphology-layout": "^0.5.0",
     "graphology-types": "^0.23.0",
     "graphql": "^14.5.8",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "mui-datatables": "^4.0.0",
     "neo4j-driver": "^4.4.1",
-    "neovis.js": "^1.6.0",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-animate-height": "^2.0.23",
-    "react-cytoscapejs": "^1.2.1",
-    "react-data-table-component": "^7.4.6",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^17.0.1",
     "react-github-btn": "^1.2.1",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.8",
     "react-redux": "^7.2.6",
-    "react-resize-aware": "^3.0.1",
-    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.2",
+    "react-scripts": "^4.0.3",
     "react-sigma-v2": "^1.3.0",
-    "redux": "^4.1.2",
     "sigma": "^2.1.3",
-    "tippy.js": "^6.3.7",
-    "web-worker": "^1.2.0"
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
-    "concurrently": "^5.2.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
-    "execa": "^4.0.2",
-    "grandstack": "^0.1.7",
     "http-proxy-middleware": "^0.20.0",
     "husky": ">=4",
     "lint-staged": ">=10",
-    "prettier": "^2.0.5",
-    "prettier-eslint-cli": "^5.0.0"
+    "prettier": "^2.0.5"
   },
   "scripts": {
     "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
