--- a/package.json
+++ b/package.json
@@ -36,13 +36,12 @@
     "react-query": "^3.34.8",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-sigma-v2": "^1.3.0",
     "sigma": "^2.1.3",
     "tippy.js": "^6.3.7"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
@@ -53,8 +52,8 @@
     "prettier": "^2.0.5"
   },
   "scripts": {
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "now-build": "react-scripts build"
@@ -77,6 +76,6 @@
     ]
   },
   "engines": {
-    "node": "14.x"
+    "node": "20.x"
   }
 }
